// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag when is clickable should render with clickable styles 1`] = `
.circuit-1 {
  position: relative;
}

.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  border: 1px solid #E6E6E6;
  border-radius: 6px;
  padding: 4px 12px;
  cursor: default;
  background-color: #FFF;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  cursor: pointer;
  outline: 0;
}

.circuit-0:active {
  color: #000;
}

.circuit-0:hover {
  background-color: #F5F5F5;
  border-color: #999999;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

<div
  class="circuit-1"
>
  <button
    class="circuit-0"
    type="button"
  >
    SomeTest
  </button>
</div>
`;

exports[`Tag when is default should render with default styles 1`] = `
.circuit-1 {
  position: relative;
}

.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  border: 1px solid #E6E6E6;
  border-radius: 6px;
  padding: 4px 12px;
  cursor: default;
  background-color: #FFF;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
}

<div
  class="circuit-1"
>
  <div
    class="circuit-0"
  >
    SomeTest
  </div>
</div>
`;

exports[`Tag when is selected should change the close icon color 1`] = `
.circuit-3 {
  position: relative;
}

.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  border: 1px solid #E6E6E6;
  border-radius: 6px;
  padding: 4px 12px;
  cursor: default;
  background-color: #FFF;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  padding-right: calc(4px + 32px);
  background-color: #3063E9;
  border-color: #234BC3;
  color: #FFF;
}

.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: 8px calc(24px - 1px);
  border-radius: 8px;
  padding: 8px;
  border: 0;
  position: absolute;
  top: 1px;
  right: 1px;
  border-radius: 4px;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-2:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-2:active {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  class="circuit-3"
>
  <div
    class="circuit-0"
  >
    SomeTest
  </div>
  <button
    class="circuit-2"
    data-testid="tag-close"
    title="Remove"
    type="button"
  >
    <svg
      fill="none"
      height="16"
      role="presentation"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 3l10 10m0-10L3 13"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
    <span
      class="circuit-1"
    >
      Remove
    </span>
  </button>
</div>
`;

exports[`Tag when is selected should change the given icon color 1`] = `
.circuit-2 {
  position: relative;
}

.circuit-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  border: 1px solid #E6E6E6;
  border-radius: 6px;
  padding: 4px 12px;
  cursor: default;
  background-color: #FFF;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #234BC3;
  color: #FFF;
}

.circuit-0 {
  margin-left: -4px;
  margin-right: 4px;
}

<div
  class="circuit-2"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-0"
      data-testid="tag-icon"
    />
    SomeTest
  </div>
</div>
`;

exports[`Tag when is selected should render with selected styles 1`] = `
.circuit-1 {
  position: relative;
}

.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  border: 1px solid #E6E6E6;
  border-radius: 6px;
  padding: 4px 12px;
  cursor: default;
  background-color: #FFF;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #234BC3;
  color: #FFF;
}

<div
  class="circuit-1"
>
  <div
    class="circuit-0"
  >
    SomeTest
  </div>
</div>
`;
